[package]
name = "pallet-evm-precompileset-assets-erc20"
authors = [ "paritytech" ]
description = "A Precompile to expose Assets pallet through an ERC20-compliant interface."
edition = "2021"
version = "0.1.0"

[dependencies]
log = { version = "0.4", default-features = false }
num_enum = { version = "0.5.3", default-features = false }
paste = "1.0.6"

# Moonbeam
precompile-utils = { path = "../utils", default-features = false }

# Substrate
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
pallet-dao-assets = { git = "https://github.com/sctllabs/societal-node", branch = "polkadot-v0.9.37-assets", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
parity-scale-codec = { version = "3.0.0", default-features = false, features = [ "derive" ] }
scale-info = { version = "2.0", default-features = false, features = [ "derive" ] }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }

# Frontier
fp-evm = { git = "https://github.com/sctllabs/frontier.git", branch = "polkadot-v0.9.37", default-features = false }
pallet-evm = { git = "https://github.com/sctllabs/frontier.git", branch = "polkadot-v0.9.37", default-features = false, features = [ "forbid-evm-reentrancy" ] }

[dev-dependencies]
derive_more = "0.99"
hex-literal = { version = "0.3.4" }
libsecp256k1 = { version = "0.7", default-features = false }
serde = { version = "1.0.101", default-features = false }
sha3 = { version = "0.10", default-features = false }

# Moonbeam
precompile-utils = { path = "../utils", default-features = false }

pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
parity-scale-codec = { version = "3.0.0", default-features = false, features = [ "derive" ] }
scale-info = { version = "2.0", default-features = false, features = [ "derive" ] }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }

[features]
default = [ "std" ]
std = [
	"fp-evm/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-dao-assets/std",
	"pallet-balances/std",
	"pallet-evm/std",
	"pallet-timestamp/std",
	"parity-scale-codec/std",
	"precompile-utils/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
]
