[package]
name = "precompile-utils"
authors = { workspace = true }
description = "Utils to write EVM precompiles."
edition = "2021"
version = "0.1.0"

[dependencies]
affix = { workspace = true }
derive_more = { version = "0.99", optional = true }
environmental = { version = "1.1.2", default-features = false }
hex = { version = "0.4.3", default-features = false }
hex-literal = { version = "0.3.4", optional = true }
impl-trait-for-tuples = "0.2.1"
log = { version = "0.4", default-features = false }
num_enum = { version = "0.5.3", default-features = false }
paste = "1.0.6"
scale-info = { version = "2.0", optional = true, default-features = false, features = [ "derive" ] }
serde = { version = "1.0.101", default-features = false, optional = true }
sha3 = { version = "0.10", default-features = false }
similar-asserts = { version = "1.1.0", optional = true }

# Moonbeam
precompile-utils-macro = { path = "macro" }

# Substrate
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
parity-scale-codec = { version = "3.0.0", default-features = false, features = [ "derive" ] }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }

# Frontier
evm = { version = "0.37.0", default-features = false, features = [ "with-codec" ] }
fp-evm = { git = "https://github.com/sctllabs/frontier.git", branch = "polkadot-v0.9.37", default-features = false }
pallet-evm = { git = "https://github.com/sctllabs/frontier.git", branch = "polkadot-v0.9.37", default-features = false, features = [ "forbid-evm-reentrancy" ] }

# Polkadot / XCM
xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.37", default-features = false }

[dev-dependencies]
hex-literal = { version = "0.3.4" }

[features]
default = [ "std" ]
std = [
	"environmental/std",
	"fp-evm/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-evm/std",
	"parity-scale-codec/std",
	"sp-core/std",
	"sp-io/std",
	"sp-std/std",
]
testing = [ "derive_more", "hex-literal", "scale-info", "serde", "similar-asserts", "std" ]
