[package]
name = "precompile-utils"
authors = [ "PureStake" ]
description = "Utils to write EVM precompiles."
edition = "2021"
version = "0.1.0"

[dependencies]
affix = { workspace = true }
derive_more = { workspace = true, optional = true }
environmental = { workspace = true }
hex = { workspace = true }
hex-literal = { workspace = true, optional = true }
impl-trait-for-tuples = { workspace = true }
log = { workspace = true }
num_enum = { workspace = true }
paste = { workspace = true }
scale-info = { workspace = true, optional = true, features = [ "derive" ] }
serde = { workspace = true, optional = true }
sha3 = { workspace = true }
similar-asserts = { workspace = true, optional = true }

# Moonbeam
precompile-utils-macro = { path = "macro" }

# Substrate
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.41", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.41", default-features = false }
parity-scale-codec = { version = "3.0.0", default-features = false, features = [ "derive" ] }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.41", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.41", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.41", default-features = false }

# Frontier
evm = { version = "0.37.0", default-features = false, features = [ "with-codec" ] }
fp-evm = { git = "https://github.com/sctllabs/frontier.git", branch = "polkadot-v0.9.41", default-features = false }
pallet-evm = { git = "https://github.com/sctllabs/frontier.git", branch = "polkadot-v0.9.41", default-features = false, features = [ "forbid-evm-reentrancy" ] }

# Polkadot / XCM
xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.41", default-features = false, optional = true }

[dev-dependencies]
hex-literal = { workspace = true }
xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.41", default-features = false }

[features]
default = [ "std" ]
std = [
	"environmental/std",
	"fp-evm/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-evm/std",
	"parity-scale-codec/std",
	"sp-core/std",
	"sp-io/std",
	"sp-std/std",
]
codec-xcm = [ "xcm" ]
testing = [ "derive_more", "hex-literal", "scale-info", "serde", "similar-asserts", "std" ]
